<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/field_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/button_start_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_phone_auth"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>

    <Button
        android:id="@+id/button_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_phone_auth"
        android:layout_margin="30dp"
        android:theme="@style/ThemeOverlay.MyDarkButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/field_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_verification_code"
            android:inputType="number" />

        <Button
            android:id="@+id/button_verify_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_phone_auth"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>
</LinearLayout>